Fix ai css, prevista gestione wrapper, ajax request per i CAP
css: modificato x-title a width: 50%, cambiate le label per i campi non
editabili.
gestione wrapper: in editSede inserito wrapperSede.
ajax: in sedeEdit prevista la modalità di selezione dei CAP.

--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -39,7 +39,7 @@
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<label id="cognome_persona"	
-											class="control-label col-md-7 col-xs-12"
+											class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.anagrafica.cognome}"></label>
 									</div>
 								</th:block>
@@ -60,7 +60,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 1)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="nome_persona" class="control-label col-md-7 col-xs-12"
+										<label id="nome_persona" class="control-label left-align col-md-7 col-xs-12"
 											 th:text="${personaWrapper.persona.anagrafica.nome}"></label>
 									</div>
 								</th:block>
@@ -81,7 +81,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 2)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="codiceFiscale_persona" class="control-label col-md-7 col-xs-12"
+										<label id="codiceFiscale_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.anagrafica.codiceFiscale}"></label>
 									</div>
 								</th:block>
@@ -117,7 +117,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 3)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="telefono_persona" class="form-control col-md-7 col-xs-12"
+										<label id="telefono_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.anagrafica.telefono}"></label>
 									</div>
 								</th:block>								
@@ -142,7 +142,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 4)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="cellulare_persona" class="control-label col-md-7 col-xs-12"
+										<label id="cellulare_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.anagrafica.cellulare}"></label>
 									</div>
 								</th:block>					
@@ -163,7 +163,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 5)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="email_persona" class="control-label col-md-7 col-xs-12"
+										<label id="email_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.anagrafica.email}"></label>
 									</div>
 								</th:block>
@@ -186,7 +186,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 6)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="pec_persona" class="control-label col-md-7 col-xs-12"
+										<label id="pec_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.anagrafica.pec}"></label>
 									</div>
 								</th:block>
@@ -212,7 +212,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 7)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="professione_persona" class="control-label col-md-7 col-xs-12"
+										<label id="professione_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.persona.professione}"></label>
 									</div>
 								</th:block>
@@ -235,7 +235,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 8)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="nomina_persona" class="control-label col-md-7 col-xs-12"
+										<label id="nomina_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.nomina.nomeFile}"></label>
 									</div>
 								</th:block>
@@ -258,7 +258,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 9)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="curriculumVitae_persona" class="control-label col-md-7 col-xs-12"
+										<label id="curriculumVitae_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.curriculumVitae.nomeFile}"></label>
 									</div>
 								</th:block>
@@ -281,7 +281,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 10)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="delega_persona" class="control-label col-md-7 col-xs-12"
+										<label id="delega_persona" class="control-label left-align col-md-7 col-xs-12"
 											th:text="${personaWrapper.delega.nomeFile}"></label>
 									</div>
 								</th:block>
