--- a/src/main/resources/templates/sede/sedeEdit.html
+++ b/src/main/resources/templates/sede/sedeEdit.html
@@ -23,173 +23,173 @@
 						<form id="formSede" class="form-horizontal form-label-left" th:action="@{/sede/save}"
 								method="post" enctype="multipart/form-data" novalidate="novalidate">
 								
-							<input type="hidden" name="editId" th:value="${sede.id}" />
+							<input type="hidden" name="editId" th:value="${sedeWrapper.sede.id}" />
 							
 							<!-- provincia -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.provincia')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset}">1</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.provincia')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset}">1</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="provincia_sede"><span th:text="#{label.provincia}">Provincia</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset)}">	
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset)}">	
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<select id="provincia_sede" class="form-control required" th:field="${sede.provincia}">
+										<select id="provincia_sede" class="form-control required" th:field="${sedeWrapper.sede.provincia}">
 			                          			<option value="" th:text="#{label.seleziona}">label.seleziona</option>
 			                          			<option th:each="provincia : ${elencoProvince}" th:value="${provincia}" th:text="${provincia}">Choose option</option>
 			                        	</select>
 								  	</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="provincia_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.provincia}"></label>
+										<label id="provincia_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.provincia}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.provincia')}" class="alert" th:errors="${sede.provincia}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.provincia')}" class="alert" th:errors="${sedeWrapper.sede.provincia}"></div>
 							</div>
 							
 							<!-- comune -->
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.comune')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 1}">2</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.comune')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 1}">2</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="comune_sede"><span th:text="#{label.comune}">Comune</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 1)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 1)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<select id="comune_sede" class="form-control required" th:field="${sede.comune}">
-											<option th:value="${sede.comune}" th:text="${sede.comune}"/>
+										<select id="comune_sede" class="form-control required" th:field="${sedeWrapper.sede.comune}">
+											<option th:value="${sedeWrapper.sede.comune}" th:text="${sedeWrapper.sede.comune}"/>
 			                        	</select>
 								  	</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 1)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 1)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="comune_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.comune}"></label>
+										<label id="comune_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.comune}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.comune')}" class="alert" th:errors="${sede.comune}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.comune')}" class="alert" th:errors="${sedeWrapper.sede.comune}"></div>
 							</div>
 								
 							<!-- indirizzo -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.indirizzo')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 2}">3</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.indirizzo')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 2}">3</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="indirizzo_sede"><span th:text="#{label.indirizzo}">Indirizzo</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 2)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 2)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<input id="indirizzo_sede" name="indirizzo_sede"
 											required="required" class="form-control col-md-7 col-xs-12"
-											type="text" th:field="${sede.indirizzo}" />
+											type="text" th:field="${sedeWrapper.sede.indirizzo}" />
 									</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 2)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 2)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="indirizzo_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.indirizzo}"></label>
+										<label id="indirizzo_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.indirizzo}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.indirizzo')}" class="alert" th:errors="${sede.indirizzo}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.indirizzo')}" class="alert" th:errors="${sedeWrapper.sede.indirizzo}"></div>
 							</div>
 							
 							<!-- CAP -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.cap')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 3}">4</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.cap')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 3}">4</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="CAP_sede"><span th:text="#{label.cap}">CAP</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 3)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 3)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<input id="CAP_sede" name="CAP_legale" required="required"
-											class="form-control col-md-7 col-xs-12" type="text"
-											pattern="numeric" th:field="${sede.cap}" />
+										<select id="CAP_sede" class="form-control required" th:field="${sedeWrapper.sede.cap}">
+											<option th:value="${sedeWrapper.sede.cap}" th:text="${sedeWrapper.sede.cap}"/>
+			                        	</select>
 									</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 3)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 3)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="CAP_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.cap}"></label>
+										<label id="CAP_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.cap}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.cap')}" class="alert" th:errors="${sede.cap}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.cap')}" class="alert" th:errors="${sedeWrapper.sede.cap}"></div>
 							</div>
 							
 							<!-- telefono -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.telefono')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 4}">5</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.telefono')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 4}">5</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="telefono_sede"><span th:text="#{label.telefono}">Telefono</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 4)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 4)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<input id="telefono_sede" name="telefono_sede"
 											required="required" class="form-control col-md-7 col-xs-12"
-											type="tel" th:field="${sede.telefono}"/>
+											type="tel" th:field="${sedeWrapper.sede.telefono}"/>
 									</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 4)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 4)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="telefono_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.telefono}"></label>
+										<label id="telefono_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.telefono}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.telefono')}" class="alert" th:errors="${sede.telefono}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.telefono')}" class="alert" th:errors="${sedeWrapper.sede.telefono}"></div>
 							</div>
 							
 							<!-- altro telefono -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.altroTelefono')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 5}">6</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.altroTelefono')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 5}">6</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="altroTel_sede"><span th:text="#{label.tel_secondario}">Altro numero telefonico</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 5)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 5)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<input id="altroTel_sede" name="altroTel_sede"
-											class="form-control col-md-7 col-xs-12" type="tel" th:field="${sede.altroTelefono}"/>
+											class="form-control col-md-7 col-xs-12" type="tel" th:field="${sedeWrapper.sede.altroTelefono}"/>
 									</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 5)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 5)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="altroTel_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.altroTelefono}"></label>
+										<label id="altroTel_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.altroTelefono}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.altroTelefono')}" class="alert" th:errors="${sede.altroTelefono}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.altroTelefono')}" class="alert" th:errors="${sedeWrapper.sede.altroTelefono}"></div>
 							</div>
 							
 							<!-- FAX -->
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.fax')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 6}">7</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.fax')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 6}">7</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="fax_sede"><span th:text="#{label.fax}">FAX</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 6)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 6)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<input id="fax_sede" name="fax_sede" required="required"
-											class="form-control col-md-7 col-xs-12" type="tel" th:field="${sede.fax}" />
+											class="form-control col-md-7 col-xs-12" type="tel" th:field="${sedeWrapper.sede.fax}" />
 									</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 6)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 6)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="fax_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.fax}"></label>
+										<label id="fax_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.fax}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.fax')}" class="alert" th:errors="${sede.fax}"></div> 	
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.fax')}" class="alert" th:errors="${sedeWrapper.sede.fax}"></div> 	
 							</div>
 							
 							<!-- email -->	
-							<div class="item form-group" th:classappend="${#fields.hasErrors('sede.email')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${idOffset + 7}">8</label>
+							<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.email')} ? 'bad'">
+								<label class="control-label col-xs-1" th:text="${sedeWrapper.idOffset + 7}">8</label>
 								<label class="control-label col-md-3 col-sm-3 col-xs-11"
 									for="email_sede"><span th:text="#{label.email}">E-mail</span><span class="required">*</span></label>
-								<th:block th:if="${#lists.contains(idEditabili, idOffset + 7)}">
+								<th:block th:if="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 7)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<input id="email_sede" name="email_sede"
 											required="required" class="form-control col-md-7 col-xs-12"
-											type="email" th:field="${sede.email}"/>
+											type="email" th:field="${sedeWrapper.sede.email}"/>
 									</div>
 								</th:block>
-								<th:block th:unless="${#lists.contains(idEditabili, idOffset + 7)}">
+								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, sedeWrapper.idOffset + 7)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="email_sede" class="control-label col-md-7 col-xs-12"
-											th:text="${sede.email}"></label>
+										<label id="email_sede" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${sedeWrapper.sede.email}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('sede.email')}" class="alert" th:errors="${sede.email}"></div>
+								<div th:if="${#fields.hasErrors('sedeWrapper.sede.email')}" class="alert" th:errors="${sedeWrapper.sede.email}"></div>
 							</div>
 							
 							<!-- Registra Sede -->
@@ -202,7 +202,7 @@
 				</div>
 			</div>
 			<script>
-			function sendAjaxRequest(){
+			function sendAjaxRequestProvincia(){
 				var provincia = $("#provincia_sede").val();
 				$.get( "/sede/comuni?provincia=" + provincia, function(data){
 					$("#comune_sede").empty();
@@ -215,6 +215,20 @@
 					}
 				});
 			};
+			function sendAjaxRequestCAP(){
+				var provincia = $("#provincia_sede").val();
+				$.get( "/sede/cap?provincia=" + provincia, function(data){
+					$("#CAP_sede").empty();
+					$("#CAP_sede").append('<option value = "">' + "---" + "</option>")
+					
+					for(item in data){
+						console.log(item);
+						var option = '<option value = "' + data[item] + '">' + data[item] + "</option>";
+						$("#CAP_sede").append(option);
+					}
+				});
+			};
+			
 			
 			function loadSedeLegale(){
 				var url = "/sede/copia";
@@ -225,7 +239,10 @@
 			$(document).ready(
 				function() {
 					$("#provincia_sede").click(function() {
-						sendAjaxRequest();
+						sendAjaxRequestProvincia();
+					});
+					$("#CAP_sede").click(function() {
+						sendAjaxRequestCAP();
 					});
 				}
 			);
