--- a/src/main/resources/templates/provider/accreditamentoList.html
+++ b/src/main/resources/templates/provider/accreditamentoList.html
@@ -33,7 +33,7 @@
 							<tbody th:unless="${#lists.isEmpty(accreditamentoList)}" th:remove="all-but-first">
 								<tr th:each="accreditamento : ${accreditamentoList}">
 									<th><a th:text="${accreditamento.tipoDomanda}"
-										th:href="@{|/provider/accreditamento/${accreditamento.id}|}">Provvisorio/Standard</a></th>
+										th:href="@{|/accreditamento/${accreditamento.id}|}">Provvisorio/Standard</a></th>
 									<th th:text="${accreditamento.stato}">Accettata</th>
 									<th th:text="${accreditamento.dataInvio}">22/05/2014</th>
 									<th th:text="${accreditamento.dataValutazione}">24/05/2014</th>
