--- a/src/main/resources/static/gentella/css/custom.css
+++ b/src/main/resources/static/gentella/css/custom.css
@@ -199,7 +199,7 @@ body.nav-md .container.body .right_col {
 }
 @media (max-width: 1200px) {
   .x_title h2 {
-    width: 62%;
+    width: auto;//custom for ecm
     font-size: 17px;
   }
   .tile, .graph {
